--- a/.github/workflows/ManageIssueOpened.yml
+++ b/.github/workflows/ManageIssueOpened.yml
@@ -46,12 +46,8 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "${ISSUE_TITLE} by ${ISSUE_AUTHOR}"
-          git pull --rebase origin main
-          git push
+          chmod +x pull-then-push.sh
+          ./workflowScripts/pull-then-push.sh          
   ManageGameFiles:
     name: Manage Game Files
     runs-on: ubuntu-latest
@@ -91,9 +87,5 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "${ISSUE_TITLE} by ${ISSUE_AUTHOR}"
-          git pull --rebase origin main
-          git push
+          chmod +x pull-then-push.sh
+          ./workflowScripts/pull-then-push.sh   
