--- a/.github/workflows/StartNewGame.yml
+++ b/.github/workflows/StartNewGame.yml
@@ -52,10 +52,9 @@ jobs:
         run: echo ${{ inputs.topic }} > PlayGame/currentTopic.txt
 
       - name: Commit changes
+        env:
+          ISSUE_TITLE: ${{ github.event.issue.title }}
+          ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "Creating new game setup for all difficulties"
-          git pull --rebase origin main
-          git push
+          chmod +x pull-then-push.sh
+          ./workflowScripts/pull-then-push.sh   
