location of ./workflowScripts/

--- a/.github/workflows/ManageIssueOpened.yml
+++ b/.github/workflows/ManageIssueOpened.yml
@@ -46,7 +46,7 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
         run: |
-          chmod +x pull-then-push.sh
+          chmod +x ./workflowScripts/pull-then-push.sh
           ./workflowScripts/pull-then-push.sh          
   ManageGameFiles:
     name: Manage Game Files
@@ -87,5 +87,5 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
         run: |
-          chmod +x pull-then-push.sh
+          chmod +x ./workflowScripts/pull-then-push.sh
           ./workflowScripts/pull-then-push.sh   
