--- a/.github/workflows/StartNewGame.yml
+++ b/.github/workflows/StartNewGame.yml
@@ -56,5 +56,5 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
         run: |
-          chmod +x pull-then-push.sh
+          chmod +x ./workflowScripts/pull-then-push.sh
           ./workflowScripts/pull-then-push.sh   
