trigger update current competition winner

--- a/.github/workflows/CheckCurrentWinners.yml
+++ b/.github/workflows/CheckCurrentWinners.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: '0 0 * * 0' # every Sunday at 00:00
   workflow_dispatch:
+  repository_dispatch:
+    types: [check-winners]
 
 jobs:
   CheckWinners:
