--- a/.github/workflows/ManageIssueOpened.yml
+++ b/.github/workflows/ManageIssueOpened.yml
@@ -92,9 +92,4 @@ jobs:
 
       - name: Push new Vote if vote
         if: startsWith(github.event.issue.title, 'Vote')
-        run: |
-          curl -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          https://api.github.com/repos/${{ github.repository }}/dispatches \
-          -d '{"event_type":"check-winners"}'
+        uses: ./.github/workflows/CheckCurrentWinners.yml@main
