set to run on ubuntu

--- a/.github/workflows/ManageIssueOpened.yml
+++ b/.github/workflows/ManageIssueOpened.yml
@@ -91,6 +91,8 @@ jobs:
           ./workflowScripts/pull-then-push.sh
 
   CheckCurrentWinners:
+    name: Start Manage Game Files
+    runs-on: ubuntu-latest
     if: startsWith(github.event.issue.title, 'Vote')
     needs: ManageGameFiles
     uses: ./.github/workflows/CheckCurrentWinners.yml
