lets give the github token just encase

--- a/.github/workflows/ManageIssueOpened.yml
+++ b/.github/workflows/ManageIssueOpened.yml
@@ -92,5 +92,8 @@ jobs:
 
   CheckCurrentWinners:
     name: Start Manage Game Files
+    needs: ManageGameFiles
     if: startsWith(github.event.issue.title, 'Vote')
     uses: ./.github/workflows/CheckCurrentWinners.yml
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
