need the permissions added at the top level

--- a/.github/workflows/ManageIssueOpened.yml
+++ b/.github/workflows/ManageIssueOpened.yml
@@ -95,5 +95,8 @@ jobs:
     needs: ManageGameFiles
     if: startsWith(github.event.issue.title, 'Vote')
     uses: ./.github/workflows/CheckCurrentWinners.yml
+    permissions:
+      contents: write
+      issues: write
     secrets:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
