--- a/.github/workflows/CheckCurrentWinners.yml
+++ b/.github/workflows/CheckCurrentWinners.yml
@@ -28,7 +28,7 @@ jobs:
           chmod +x ./workflowScripts/pull-then-push.sh
           ./workflowScripts/pull-then-push.sh
 
-```   - name: Print out for validation
+     - name: Print out for validation
         run: |
           echo "The winners have been checked and the changes have been pushed to the repository."
           echo "Please check the repository to verify the changes."
