--- a/.github/ISSUE_TEMPLATE/NewImage.yml
+++ b/.github/ISSUE_TEMPLATE/NewImage.yml
@@ -20,6 +20,13 @@ body:
         - Book
         - Car
         - Boat
+        - Helicopter
+        - Plane
+        - Train
+        - Bus
+        - Bicycle
+        - Motorcycle
+        - Truck
     validations:
       required: true
 
